Updates to recently edited files:

--- a/force-app/main/default/classes/QuoteLineItemController.cls
+++ b/force-app/main/default/classes/QuoteLineItemController.cls
@@ -1,11 +1,18 @@
+/**
+ * @description       : 
+ * @author            : ChangeMeIn@UserSettingsUnder.SFDoc
+ * @group             : 
+ * @last modified on  : 09-25-2025
+ * @last modified by  : ChangeMeIn@UserSettingsUnder.SFDoc
+**/
 public with sharing class QuoteLineItemController {
     
     @AuraEnabled(cacheable=true)
-    public static List<QuoteLineItem> getQuoteLineItems(String quoteId, List<String> fields, String familyFilter) {
+    public static List<QuoteLineItem> getQuoteLineItems(Id recordId, List<String> fields, String familyFilter) {
         try {
             // Validate inputs
-            if (String.isBlank(quoteId)) {
-                throw new AuraHandledException('Quote ID is required');
+            if (String.isBlank(recordId)) {
+                throw new AuraHandledException('Record ID is required');
             }
             
             if (fields == null || fields.isEmpty()) {
@@ -14,6 +21,7 @@ public with sharing class QuoteLineItemController {
             
             // Clean and validate field names
             Set<String> cleanFields = new Set<String>();
+            cleanFields.add('Product2.Name'); // Always include Product2.Name
             for (String field : fields) {
                 if (String.isNotBlank(field)) {
                     cleanFields.add(String.escapeSingleQuotes(field.trim()));
@@ -29,19 +37,19 @@ public with sharing class QuoteLineItemController {
             cleanFields.add('QuoteId');
             
             // Build the dynamic SOQL query
-            String soqlQuery = 'SELECT ' + String.join(new List<String>(cleanFields), ', ') + 
-                              ' FROM QuoteLineItem WHERE QuoteId = :quoteId';
+            String soqlQuery = 'SELECT Product2.Name, ' + String.join(new List<String>(cleanFields), ', ') + 
+                              ' FROM QuoteLineItem WHERE QuoteId = :recordId';
             
             // Add family filter if provided
             if (String.isNotBlank(familyFilter)) {
-                soqlQuery += ' AND Family = :familyFilter';
+                soqlQuery += ' AND Product2.Family = :familyFilter';
             }
             
             // Add ordering
             soqlQuery += ' ORDER BY SortOrder, Id';
             
             System.debug('Executing SOQL: ' + soqlQuery);
-            System.debug('Quote ID: ' + quoteId);
+            System.debug('Record ID: ' + recordId);
             System.debug('Family Filter: ' + familyFilter);
             
             // Execute the query
@@ -57,11 +65,11 @@ public with sharing class QuoteLineItemController {
     }
     
     @AuraEnabled(cacheable=true)
-    public static List<QuoteLineItem> getQuoteLineItemsWithGroups(String quoteId, List<String> fields, String familyFilter) {
+    public static List<QuoteLineItem> getQuoteLineItemsWithGroups(String recordId, List<String> fields, String familyFilter) {
         try {
             // Validate inputs
-            if (String.isBlank(quoteId)) {
-                throw new AuraHandledException('Quote ID is required');
+            if (String.isBlank(recordId)) {
+                throw new AuraHandledException('Record ID is required');
             }
             
             if (fields == null || fields.isEmpty()) {
@@ -88,18 +96,18 @@ public with sharing class QuoteLineItemController {
             // Build the dynamic SOQL query with QuoteLineItemGroup relationship
             String soqlQuery = 'SELECT ' + String.join(new List<String>(cleanFields), ', ') + 
                               ', QuoteLineItemGroup.Name, QuoteLineItemGroup.SortOrder' +
-                              ' FROM QuoteLineItem WHERE QuoteId = :quoteId';
+                              ' FROM QuoteLineItem WHERE QuoteId = :recordId';
             
             // Add family filter if provided
             if (String.isNotBlank(familyFilter)) {
-                soqlQuery += ' AND Family = :familyFilter';
+                soqlQuery += ' AND Product2.Family = :familyFilter';
             }
             
             // Add ordering by group first, then by line item
             soqlQuery += ' ORDER BY QuoteLineItemGroup.SortOrder NULLS LAST, SortOrder, Id';
             
             System.debug('Executing SOQL with Groups: ' + soqlQuery);
-            System.debug('Quote ID: ' + quoteId);
+            System.debug('Record ID: ' + recordId);
             System.debug('Family Filter: ' + familyFilter);
             
             // Execute the query
